Fix card content spacing

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -233,26 +233,10 @@ h3 {
   border-radius: 3px;
 }
 
-/* .cards-display {
-  border: inset;
-} */
-
-
 .swiper {
   width: 80vw;
   height: 70vh;
   border: rgba(241,203,134,.4) inset;
-}
-
-.card {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 50vh;
-  width: 25vw;
-  background-size: cover;
-  box-shadow: 0px 4px 4px rgba(23, 15, 61, .35);
 }
 
 .swiper-slide {
@@ -274,8 +258,22 @@ h3 {
   align-items: center;
 }
 
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  width: 25vw;
+  background-size: cover;
+  box-shadow: 0px 4px 4px rgba(23, 15, 61, .35);
+}
+
 
 .card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   font-size: 14px;
   font-weight: bolder;
   text-align: center;
@@ -284,10 +282,6 @@ h3 {
   width: 70%;
   background-color: rgb(244, 236, 220, .85);
 }
-
-/* .trip-deets {
-  margin: 2px;
-} */
 
 .card-footer {
   display: flex;
